Refactoring List.of()  to Collections.singletonList() where only one object exists in the list
ArtistRetrievalServiceImplTest - setArtistDetails() test implemented